# esdexercises

./: .gitignore
ASD/: .gitignore
ASD/Average/: Average.cpp  Average.h  CMakeLists.txt  main.cpp
ASD/COWVector/: CMakeLists.txt  COWVector.h  Makefile  main.cpp
ASD/Calculator/: BinaryExpr.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.sln  Calculator.vcxproj  Calculator.vcxproj.filters  Expression.h  Makefile  Number.h  UnaryExpr.h  base.h  main.cpp  scanner.cpp  scanner.h  scanner_impl.cpp  scanner_impl.h  symbol.cpp  symbol.h
ASD/CalculatorSmartPtr/: CMakeLists.txt  Expression.cpp  Expression.h  base.h  symbol.cpp  symbol.h
ASD/CountPrimes/: CMakeLists.txt  CountPrimes.cpp  CountPrimes.sln  CountPrimes.vcxproj  CountPrimes.vcxproj.filters
ASD/FibonacciIterator/: CMakeLists.txt
ASD/FibonacciIterator/FibonacciIterator/: FibonacciIterator.h
ASD/FibonacciIterator/Test/: CMakeLists.txt  FibonacciIteratorTest.cpp
ASD/GenericSet/: CMakeLists.txt
ASD/GenericSet/Set/: BaseSet.h  CMakeLists.txt  CountingSet.h  Set.h
ASD/GenericSet/Test/: CMakeLists.txt  PrintSet.cpp  SetTest.cpp
ASD/LineSort/: CMakeLists.txt
ASD/LineSort/LineGen/: CMakeLists.txt  LineGen.cpp
ASD/LineSort/LineSort/: CMakeLists.txt  MyFlowControl.h  OutputFilter.h  main.cpp
ASD/LocationManager/: CMakeLists.txt
ASD/LocationManager/LocationManager/: CMakeLists.txt  Location.cpp  Location.h  LocationManager.cpp  LocationManager.h
ASD/LocationManager/Test/: CMakeLists.txt  LocationManagerTest.cpp
ASD/Means/: CMakeLists.txt  Means.cpp  Means.h  main.cpp
ASD/Median/: CMakeLists.txt  Median.cpp  Median.sln  Median.vcxproj  Median.vcxproj.filters
ASD/MergeSort/: CMakeLists.txt  MergeSort.sln  MergeSort.vcxproj  main.cpp  tbb.props
ASD/TBBCountPrimes/: CMakeLists.txt  CountPrimes.cpp  CountPrimes.sln  CountPrimes.vcxproj
AVS/: Klausurfragen.doc  audio_fragen.doc
AVS/AVS3/: .gitignore  ycrcb.m
AVS/AVS3/Play/: .cproject  Makefile  (+1 more)
AVS/AVS3/View/: .cproject  .project  CMakeLists.txt  Makefile  view
AVS/AVS3/View/src/: AVS.c  AVS.cpp  AVS.h  sdlppmview.c  sdlppmview.cpp  simpleppm.c  simpleppm.h
AVS/MCFilterBank_2Subbands_2015_01/: [Content_Types].xml
AVS/maskingApplet_-_Audio_Coding_and_Psychoacoustics_and_Masking_Effects/: maskingApplet.html
AVS/octaveEqApplet_-_Oktav-Equalizer/: octaveEqApplet.html
AVS/ovsApplet - Oversampling/: Thumbs.db  avs_01.m
AVS/ovsApplet - Quantization Dither and Noise Shaping/: ovsApplet.html
AVS/qdsApplet - Oversampling/: avs_02.m  qdsApplet.html
DRS/: .gitignore
DRS/HelloWorld/: CMakeLists.txt  main.cpp
DRS/Hello_World/: .gdbinit  .project  main.cpp
SPS/: .gitignore
SPS/doc/: JuliaResults.xlsx  Thumbs.db  device_info.xml
SPS/ueg/: AnalyseAllVersions.nvact  SPS.sln
SQE/: .directory  .gitignore
SQE/Exam1_Profelt/: .project
SQE/HTMLParser-2.0-SNAPSHOT/: .project  pom.xml
SQE/SQE01-Profelt-Triangle1st/: SQE01-Q&A.txt  SQE01-TestCases.txt
SQE/SQE01-Profelt_Triangle1st/: .project
SQE/SQE02-Profelt_RingBufferTest/: .project  Exercise3-Q&A.txt
SQE/SQE03-Profelt_Triangle1st/: .project
SQE/SQE03-Profelt_Triangle1stTest/: .classpath  .project
SQE/SQE04-Profelt_ObservableTests/: .classpath  .project  Exercise5-Q&A.txt
SQE/SQE05-Profelt_HTMLParser/: .classpath  .project
SQE/SQE05-Profelt_RingBufferTest/: .project  .sessions.html  Exercise6-3.txt  Exercise6-4.txt
SQE/SQE07-Profelt_RingBufferStatesTest/: .project  IteratorTests.txt  RingBufferTests.txt  StateDiagramIterator.dia  StateDiagramRingBuffer.dia  TransitionTreeIterator.dia  TransitionTreeRingBuffer.dia
SQE/SQE08-Profelt_ParameterizedTest/: .project  TriangleTests.txt
SQE/SQE09-Profelt_AbbotJCalc/: .classpath  .project  JCalcTestAdd.xml  exercise11.txt
SQE/SQE10-Profelt_AbbotTriangle1st/: .classpath  .project  Triangle1st_ErrorMsg.xml  Triangle1st_ValidClalc.xml
SQE/SQE13-Profelt_RingBufferRandoop/: .project
SQE/WidocSeleniumTests/: .classpath  SimpleSearchTest.html
SQE/abbot-1.3.0/: README.shtml
WIA/: .gitignore
WIA/abstract/: abstract.tex
WIA/paper/: MasterThesis.bib  literature.bib  literature.bib.bak  paper-blx.bib  paper.bcf  paper.run.xml  paper.tex
(+1498 files in other folders)
